[package]
name = "google_images_scraper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
base64 = "0.21.2"
